Further API doc updates and added endpoints
